fix line breaks in code snippet for Firefox
In Firefox, the code window looks like this:

Apparently in Firefox, `<br>`s in a flexbox [don't take up any space][1], but they do in Chrome. Here's a [minimal reproduction in jsfiddle][2] to show it.

I did a little survey of syntax highlighter libraries to see what empty lines look like in their rendered outputs. This change uses a rule I saw in the [code snippets on the Prisma docs][3] (who uses [Fumadocs][4], who uses [Shiki][5], but the CSS rule is from Fumadocs) where they [make empty lines have `1lh` height][6].

[1]: https://stackoverflow.com/a/45143493
[2]: https://jsfiddle.net/afs4q6ej/
[3]: https://www.prisma.io/docs/prisma-orm/quickstart/sqlite#5-define-your-data-model
[4]: https://www.fumadocs.dev/docs
[5]: https://github.com/shikijs/shiki
[6]: https://github.com/fuma-nama/fumadocs/blob/9ba67d3052a851575226af1177f0006281c2e413/packages/base-ui/css/lib/shiki.css#L16-L18

--- a/src/components/ui/code/index.module.css
+++ b/src/components/ui/code/index.module.css
@@ -48,10 +48,11 @@
 
 .code > * {
   padding: 0 var(--_code-spacing);
+  display: inline;
 }
 
-.code > * {
-  display: inline;
+.code > *:empty {
+  height: 1lh;
 }
 
 .code,
